src/global.scss
/* ... */
h3::before {
	content: "";
	position: absolute;
	left: -10px;
	top: 5px;
	width: 10px;
	height: 32px;
	background: #559c18;
}
h3::after {
	content: "";
	position: absolute;
	right: -12px;
	top: 0;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 32px 0 0 12px;
	border-color: transparent transparent transparent #5fad1b;
}
h4 {
	font-size: 18px;
	color: #666;
	font-weight: bold
}
a {
	color: #111;
	text-decoration: none;
}
a:visited {
	color: #111;
}
textarea {
	font-family: "Roboto";
	font-size: 15px;
}
[draggable] {
	user-select: none;
}
.button {
	display: inline-block;
	position: relative;
	text-align: center;
	padding: 6px 10px;
	font-size: 17px;
	cursor: pointer;
	border: none;
	color: #333;
	background: white;
	user-select: none;
}
.button:not(.flat) {
	border-radius: 4px;
	border-bottom: 3px solid #ccc;
}
.button.large {
	padding: 6px 26px;
	font-size: 20px;
}
.button:not(.disabled):not(.flat):active {
	top: 3px;
	border-bottom: none;
	margin-bottom: 3px;
}
.button.disabled {
	background: #777;
	color: white;
	cursor: auto;
}
.button.green {
	background: #5fad1b;
	color: white;
	border-bottom: 3px solid #468014;
}
.button:not(.disabled).green:hover {
	background-image: linear-gradient(to bottom, rgba(110, 201, 31, 0.7) 0%, rgba(110, 201, 31, 0.9) 50%, rgba(110, 201, 31, 0.7) 100%);
}
.button.red {
	background: #ca0000;
	color: white;
	border-bottom: 3px solid #9e0000;
}
.button.red:hover {
	background: #dd0000;
	border-bottom: 3px solid #9e0000;
}
.button:not(.flat) i {
	vertical-align: top;
	margin-top: -3px;
}
.center {
	text-align: center;
}
.page-header.page-bar .tabs {
	margin-left: 20px;
}
.page-bar .tab {
	display: inline-block;
	text-align: center;
	padding: 7px 10px;
	padding-bottom: 11px;
	font-size: 18px;
	height: 18px;
	vertical-align: top;
	margin-right: 20px;
	color: #eee;
	position: relative;
	background: rgba(150, 150, 150, 0.2);
	margin-left: 2px;
	user-select: none;
}
.page-bar .tab:not(.disabled) {
	cursor: pointer;
}
.page-bar .tab:not(.disabled):hover {
	background-color: rgba(200, 200, 200, 0.4);
}
.page-bar .tab::before {
	content: "";
	position: absolute;
	left: -20px;
	top: 0;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 0 20px 36px 0;
	border-color: transparent rgba(150, 150, 150, 0.2) transparent transparent;
}
.page-bar .tab:not(.disabled):hover::before {
	border-color: transparent rgba(200, 200, 200, 0.4) transparent transparent ;
}
.page-bar .tab::after {
	content: "";
	position: absolute;
	right: -20px;
	top: 0;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 36px 0 0 20px;
	border-color: transparent transparent transparent rgba(150, 150, 150, 0.2);
}
.page-bar .tab:not(.disabled):hover::after {
	border-color: transparent  transparent transparent rgba(200, 200, 200, 0.4);
}
.page-bar .tab.selected {
	background-color: rgba(110, 201, 31, 0.8);
	color: #111;
}
.page-bar .tab:first-child.selected::before {
	content: "";
	position: absolute;
	left: -20px;
	top: 0;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 0 20px 36px 0;
	border-color: transparent rgba(110, 201, 31, 0.8) transparent   transparent ;
}
.page-bar .tab:first-child.selected::after {
	content: "";
	position: absolute;
	right: -20px;
	top: 0;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 36px 0 0 20px;
	border-color: transparent  transparent   transparent rgba(110, 201, 31, 0.8);
}
.page-bar .tab span {
	vertical-align: top;
}
.page-bar .tab img {
	width: 22px;
	margin-right: 8px;
	margin-top: -1px;
}
.page-bar .tab i {
	margin-top: -3px;
	margin-right: 5px;
}
.page-bar .tab input[type="text"],
.page-bar .tab input[type="number"] {
	vertical-align: top;
	margin-top: -4px;
	background: rgba(0,0,0,0.2);
	color: white;
	border: none;
}
.page-bar .tab.green {
	background-color: rgba(95,173,27,0.7);
	color: white;
}
.page-bar .tab.green:before {
	border-color: transparent rgba(95,173,27,0.7) transparent transparent;
}
.page-bar .tab.green:after {
	border-color: transparent transparent transparent rgba(95,173,27,0.7);
}
.page-bar .tab.green:not(.disabled):hover {
	background-color: rgba(95,173,27,0.9);
}
.page-bar .tab.green:not(.disabled):hover:before {
	border-color: transparent rgba(95,173,27,0.9) transparent transparent;
}
.page-bar .tab.green:not(.disabled):hover:after {
	border-color: transparent transparent transparent rgba(95,173,27,0.9);
}
.page-footer .tab:first-child:before {
	border: none;
}
.hab {
	width: 18px;
	height: 18px;
	vertical-align: bottom;
	display: inline-block;
	background-image: url("/image/hab.png");
	background-repeat: no-repeat;
	background-position: center;
}
.crystal {
	width: 18px;
	height: 40px;
	vertical-align: bottom;
	margin-top: -15px;
	margin-bottom: -10px;
	display: inline-block;
	background-image: url("/image/crystal.png");
	background-repeat: no-repeat;
	background-position: center;
}
.popup {
	display: none;
	width: 700px;
	box-shadow: 0px 0px 50px #111;
	transition: height ease 0.3s;
	margin-bottom: 50px;
	text-align: left;
}
.popup.draggable {
	position: fixed;
	z-index: 600;
	top: 0;
	left: 0;
}
.v-dialog > .title {
	background: #2a2a2a;
	color: #eee;
	font-weight: 300;
	padding: 0 10px;
	padding-top: 6px;
	padding-bottom: 4px;
	height: 30px;
	font-size: 23px;
	text-align: left;
	border-top-left-radius: 2px;
	border-top-right-radius: 2px;
}
.v-dialog .title .options {
	display: flex;
	float: right;
	cursor: pointer;
	margin-top: -6px;
	margin-bottom: -4px;
	margin-right: -10px;
}
.v-dialog .title .options .option {
	background: black;
	height: 26px;
	width: 26px;
	padding: 7px;
}
.v-dialog .title .options .option:hover {
	background-image: linear-gradient(to bottom, rgba(110, 201, 31, 0.7) 0%, rgba(110, 201, 31, 0.9) 50%, rgba(110, 201, 31, 0.7) 100%);
}
.v-dialog .title .options .option img {
	width: 26px;
	height: 26px;
}
.v-dialog.draggable .title {
	cursor: move;
}
/* ... */

